# gelato

./: CMakeLists.txt
test/: test_eigen3.cpp  test_gl.cpp  test_opencv.cpp
